@@ -1,51 +1,36 @@
+// src/main/java/com/uni/kitcheniq/service/OrderService.java
 package com.uni.kitcheniq.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.uni.kitcheniq.enums.OrderStatusType;
 import com.uni.kitcheniq.models.*;
-import com.uni.kitcheniq.repository.EmployeeRepository;
-import com.uni.kitcheniq.repository.OrderItemRepository;
-import com.uni.kitcheniq.repository.OrderRepository;
-import com.uni.kitcheniq.repository.MenuProductRepository;
-import com.uni.kitcheniq.repository.OrderStatusRepository;
+import com.uni.kitcheniq.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.util.HashMap;
-import java.util.Map;
-
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.time.OffsetDateTime;
+import java.util.*;
 
 @Service
 public class OrderService implements IOrderService {
 
     @Autowired
     private OrderRepository orderRepository;
-
     @Autowired
     private OrderItemRepository orderItemRepository;
-
     @Autowired
     private OrderStatusRepository orderStatusRepository;
-
     @Autowired
     private EmployeeRepository employeeRepository;
-
     @Autowired
     private MenuProductRepository menuProductRepository;
 
     @Override
     public List<Order> getAllOrders() {
         return orderRepository.findAll();
-
     }
-
 
     @Override
     public Order getOrderById(Long id) {
@@ -54,159 +39,114 @@ public class OrderService implements IOrderService {
 
     @Override
     public Order createOrder(Order order) {
+        if (order.getRequestTime() == null) order.setRequestTime(OffsetDateTime.now());
+        if (order.getTableNumber() == null) order.setTableNumber(0);
         Order savedOrder = orderRepository.save(order);
-
         OrderStatus initialStatus = new OrderStatus();
         initialStatus.setStatus(OrderStatusType.PENDING);
         initialStatus.setOrders(savedOrder);
         initialStatus.setId(savedOrder.getId());
         orderStatusRepository.save(initialStatus);
-
         return savedOrder;
     }
 
     @Transactional
     @Override
-    public Order createOrderWithInitialItem(String employeeId, Long menuComponentId, Integer quantity) {
-        // Crear orden principal
+    public Order createOrderWithInitialItem(String employeeId, Long menuComponentId, Integer quantity, Integer tableNumber) {
         Order order = new Order();
         order.setOrderDate(LocalDate.now());
         order.setOrderPrice(0.0);
         order.setOrderBill("[]");
         order.setOrderDetails("");
+        order.setTableNumber(tableNumber != null ? tableNumber : 0);
+        order.setRequestTime(OffsetDateTime.now());
         order = orderRepository.saveAndFlush(order);
 
-        // Crear estado inicial
         OrderStatus initialStatus = new OrderStatus();
         initialStatus.setId(order.getId());
         initialStatus.setOrders(order);
         initialStatus.setStatus(OrderStatusType.PENDING);
-
         if (employeeId != null && !employeeId.isEmpty()) {
-            Employee employee = employeeRepository.findById(employeeId).orElse(null);
-            if (employee != null) {
-                initialStatus.setEmployeeId(employee);
-            }
+            employeeRepository.findById(employeeId).ifPresent(initialStatus::setEmployeeId);
         }
-
         orderStatusRepository.saveAndFlush(initialStatus);
 
-        // Añadir ítem si es necesario
         if (menuComponentId != null) {
-            try {
-                MenuProduct menuProduct = menuProductRepository.findById(menuComponentId)
-                        .orElseThrow(() -> new IllegalArgumentException("MenuComponent no encontrado: " + menuComponentId));
-
-                // Crear el OrderItem con el nuevo campo quantity
-                OrderItem initialItem = new OrderItem();
-                initialItem.setOrder(order);
-                initialItem.setComponent(menuProduct);
-                initialItem.setQuantity(quantity != null ? quantity : 1);
-
-                orderItemRepository.saveAndFlush(initialItem);
-
-                // Actualizar precio total
-                double totalPrice = menuProduct.getPrice() * initialItem.getQuantity();
-                order.setOrderPrice(totalPrice);
-
-                // Usar el método auxiliar para crear JSON simplificado
-                order.setOrderBill(createSimplifiedOrderItemsJson(order.getId()));
-
-                orderRepository.save(order);
-            } catch (Exception e) {
-                throw new RuntimeException("Error al crear OrderItem: " + e.getMessage(), e);
-            }
+            MenuProduct menuProduct = menuProductRepository.findById(menuComponentId)
+                    .orElseThrow(() -> new IllegalArgumentException("MenuComponent no encontrado: " + menuComponentId));
+            OrderItem initialItem = new OrderItem();
+            initialItem.setOrder(order);
+            initialItem.setComponent(menuProduct);
+            initialItem.setQuantity(quantity != null ? quantity : 1);
+            orderItemRepository.saveAndFlush(initialItem);
+            double totalPrice = menuProduct.getPrice() * initialItem.getQuantity();
+            order.setOrderPrice(totalPrice);
+            order.setOrderBill(createSimplifiedOrderItemsJson(order.getId()));
+            orderRepository.save(order);
         }
-
         return order;
     }
+
+    // Ajustado: se elimina el campo "id" del ítem
     private String createSimplifiedOrderItemsJson(Long orderId) {
         List<OrderItem> items = orderItemRepository.findByOrderId(orderId);
         List<Map<String, Object>> simplifiedItems = new ArrayList<>();
-
         for (OrderItem item : items) {
-            Map<String, Object> itemMap = new HashMap<>();
-            itemMap.put("id", item.getId());
-            itemMap.put("quantity", item.getQuantity());
-
+            Map<String, Object> m = new HashMap<>();
+            m.put("quantity", item.getQuantity());
             if (item.getComponent() != null) {
-                MenuComponent component = item.getComponent();
-                Long componentId = component.getId();
-                itemMap.put("productId", componentId);
-
-                // Buscar siempre en el repositorio para asegurar datos completos
-                MenuProduct product = menuProductRepository.findById(componentId).orElse(null);
-                if (product != null) {
-                    itemMap.put("productName", product.getName());
-                    itemMap.put("productPrice", product.getPrice());
-                }
+                Long cid = item.getComponent().getId();
+                m.put("productId", cid);
+                menuProductRepository.findById(cid).ifPresent(prod -> {
+                    m.put("productName", prod.getName());
+                    m.put("productPrice", prod.getPrice());
+                });
             }
-
-            simplifiedItems.add(itemMap);
+            simplifiedItems.add(m);
         }
-
         try {
-            ObjectMapper mapper = new ObjectMapper();
-            return mapper.writeValueAsString(simplifiedItems);
+            return new ObjectMapper().writeValueAsString(simplifiedItems);
         } catch (Exception e) {
             return "[]";
         }
     }
 
-
-
-
-
-
-
-
     @Override
     public OrderItem createOrderItem(OrderItem orderItem) {
         Order order = orderRepository.findById(orderItem.getOrder().getId())
                 .orElseThrow(() -> new IllegalArgumentException("Orden no encontrada"));
-
         OrderItem savedItem = orderItemRepository.save(orderItem);
-
-        MenuProduct menuProduct = menuProductRepository.findById(orderItem.getComponent().getId())
-                .orElseThrow(() -> new IllegalArgumentException("Componente de menú no encontrado"));
-
         List<OrderItem> allItems = orderItemRepository.findByOrderId(order.getId());
-
         double totalPrice = 0.0;
         for (OrderItem item : allItems) {
-            MenuProduct product = menuProductRepository.findById(item.getComponent().getId())
-                    .orElse(null);
-            if (product != null) {
-                totalPrice += product.getPrice() * item.getQuantity();
-            }
+            double price = menuProductRepository.findById(item.getComponent().getId())
+                    .map(MenuProduct::getPrice).orElse(0.0);
+            totalPrice += price * item.getQuantity();
         }
         order.setOrderPrice(totalPrice);
-
-        // NUEVO: Usar el método auxiliar para crear JSON simplificado
         order.setOrderBill(createSimplifiedOrderItemsJson(order.getId()));
         orderRepository.save(order);
-
         return savedItem;
     }
 
-
     @Override
     public Order updateOrder(Long id, Order order) {
-        Order existingOrder = orderRepository.findById(id).orElse(null);
-        if (existingOrder != null) {
-            existingOrder.setOrderBill(order.getOrderBill());
-            existingOrder.setOrderPrice(order.getOrderPrice());
-            return orderRepository.save(existingOrder);
+        Order existing = orderRepository.findById(id).orElse(null);
+        if (existing != null) {
+            existing.setOrderBill(order.getOrderBill());
+            existing.setOrderPrice(order.getOrderPrice());
+            if (order.getTableNumber() != null) existing.setTableNumber(order.getTableNumber());
+            return orderRepository.save(existing);
         }
         return null;
     }
 
     @Override
     public Order cancelOrder(Long id) {
-        Order existingOrder = orderRepository.findById(id).orElse(null);
-        if (existingOrder != null) {
+        Order existing = orderRepository.findById(id).orElse(null);
+        if (existing != null) {
             updateOrderStatus(id, OrderStatusType.CANCELLED);
-            return existingOrder;
+            return existing;
         }
         return null;
     }
@@ -214,22 +154,13 @@ public class OrderService implements IOrderService {
     @Override
     public List<Order> getOrdersByEmployeeId(String employeeId) {
         List<OrderStatus> statuses = orderStatusRepository.findByEmployeeId_Id(employeeId);
-        if (statuses == null || statuses.isEmpty()) {
-            return List.of();
-        }
-
-        List<Long> orderIds = new ArrayList<>();
+        if (statuses == null || statuses.isEmpty()) return List.of();
+        List<Long> ids = new ArrayList<>();
         for (OrderStatus os : statuses) {
-            if (os != null && os.getId() != null && !orderIds.contains(os.getId())) {
-                orderIds.add(os.getId());
-            }
+            if (os != null && os.getId() != null && !ids.contains(os.getId())) ids.add(os.getId());
         }
-
-        if (orderIds.isEmpty()) {
-            return List.of();
-        }
-
-        return orderRepository.findAllById(orderIds);
+        if (ids.isEmpty()) return List.of();
+        return orderRepository.findAllById(ids);
     }
 
     @Override
@@ -239,12 +170,12 @@ public class OrderService implements IOrderService {
 
     @Override
     public OrderItem updateOrderItemByOrderId(Long orderId, OrderItem orderItem) {
-        List<OrderItem> existingOrderItems = orderItemRepository.findByOrderId(orderId);
-        if (existingOrderItems != null && !existingOrderItems.isEmpty()) {
-            for (OrderItem item : existingOrderItems) {
-                if (item.getId().equals(orderItem.getId())) {
-                    item.setComponent(orderItem.getComponent());
-                    return orderItemRepository.save(item);
+        List<OrderItem> existing = orderItemRepository.findByOrderId(orderId);
+        if (existing != null) {
+            for (OrderItem it : existing) {
+                if (it.getId().equals(orderItem.getId())) {
+                    it.setComponent(orderItem.getComponent());
+                    return orderItemRepository.save(it);
                 }
             }
         }
@@ -253,67 +184,48 @@ public class OrderService implements IOrderService {
 
     @Override
     public void deleteOrderItemByOrderId(Long orderId, Long productId) {
-
-        List<OrderItem> existingOrderItems = orderItemRepository.findByOrderId(orderId);
-
-        if (existingOrderItems != null && !existingOrderItems.isEmpty()) {
-
-            OrderItem targetItem = null;
-            for (OrderItem item : existingOrderItems) {
-                if (item.getComponent() != null && item.getComponent().getId().equals(productId)) {
-                    targetItem = item;
-                    break;
-                }
+        List<OrderItem> existing = orderItemRepository.findByOrderId(orderId);
+        if (existing == null || existing.isEmpty()) return;
+        OrderItem target = null;
+        for (OrderItem it : existing) {
+            if (it.getComponent() != null && it.getComponent().getId().equals(productId)) {
+                target = it;
+                break;
             }
-
-
-            if (targetItem != null) {
-
-                if (targetItem.getQuantity() > 1) {
-
-                    targetItem.setQuantity(targetItem.getQuantity() - 1);
-                    orderItemRepository.save(targetItem);
-                } else {
-
-                    orderItemRepository.delete(targetItem);
+        }
+        if (target != null) {
+            if (target.getQuantity() > 1) {
+                target.setQuantity(target.getQuantity() - 1);
+                orderItemRepository.save(target);
+            } else {
+                orderItemRepository.delete(target);
+            }
+            Order order = orderRepository.findById(orderId).orElse(null);
+            if (order != null) {
+                List<OrderItem> remaining = orderItemRepository.findByOrderId(orderId);
+                double total = 0.0;
+                for (OrderItem it : remaining) {
+                    double price = menuProductRepository.findById(it.getComponent().getId())
+                            .map(MenuProduct::getPrice).orElse(0.0);
+                    total += price * it.getQuantity();
                 }
-
-                Order order = orderRepository.findById(orderId).orElse(null);
-                if (order != null) {
-                    List<OrderItem> remainingItems = orderItemRepository.findByOrderId(orderId);
-
-                    double totalPrice = 0.0;
-                    for (OrderItem item : remainingItems) {
-                        MenuProduct product = menuProductRepository.findById(item.getComponent().getId())
-                                .orElse(null);
-                        if (product != null) {
-                            totalPrice += product.getPrice() * item.getQuantity();
-                        }
-                    }
-                    order.setOrderPrice(totalPrice);
-
-                    order.setOrderBill(createSimplifiedOrderItemsJson(order.getId()));
-                    orderRepository.save(order);
-                }
+                order.setOrderPrice(total);
+                order.setOrderBill(createSimplifiedOrderItemsJson(order.getId()));
+                orderRepository.save(order);
             }
         }
     }
 
-
     @Override
     public List<Order> getOrdersByStatus(OrderStatusType statusType) {
         if (statusType == null) return List.of();
-
         List<OrderStatus> statuses = orderStatusRepository.findAll();
         if (statuses == null || statuses.isEmpty()) return List.of();
-
         List<Long> orderIds = statuses.stream()
                 .filter(s -> s != null && statusType.equals(s.getStatus()))
                 .map(OrderStatus::getId)
-                .filter(id -> id != null)
                 .distinct()
-                .collect(Collectors.toList());
-
+                .toList();
         if (orderIds.isEmpty()) return List.of();
         return orderRepository.findAllById(orderIds);
     }
@@ -321,16 +233,12 @@ public class OrderService implements IOrderService {
     @Override
     public OrderStatus updateOrderStatus(Long orderId, OrderStatusType status) {
         if (orderId == null || status == null) return null;
-
-        // Obtiene el estado actual de la orden
         Optional<OrderStatus> lastStatus = orderStatusRepository.findStatusByOrders_Id(orderId);
-        OrderStatusType current = lastStatus.isPresent() ? lastStatus.get().getStatus() : null;
+        OrderStatusType current = lastStatus.map(OrderStatus::getStatus).orElse(null);
 
-        // Si piden CANCELLED, cancelar la orden y guardar el nuevo estado
         if (status == OrderStatusType.CANCELLED) {
             Order order = orderRepository.findById(orderId).orElse(null);
             if (order == null) return null;
-
             OrderStatus cancelled = lastStatus.orElse(new OrderStatus());
             cancelled.setId(orderId);
             cancelled.setOrders(order);
@@ -339,22 +247,17 @@ public class OrderService implements IOrderService {
         }
 
         if (current == null) {
-            if (status == OrderStatusType.PENDING) {
-                Order order = orderRepository.findById(orderId).orElse(null);
-                if (order == null) return null;
-
-                OrderStatus s = new OrderStatus();
-                s.setId(orderId);
-                s.setOrders(order);
-                s.setStatus(status);
-                return orderStatusRepository.save(s);
-            }
-            return null;
+            if (status != OrderStatusType.PENDING) return null;
+            Order order = orderRepository.findById(orderId).orElse(null);
+            if (order == null) return null;
+            OrderStatus s = new OrderStatus();
+            s.setId(orderId);
+            s.setOrders(order);
+            s.setStatus(status);
+            return orderStatusRepository.save(s);
         }
 
-        if (status == current) {
-            return lastStatus.orElse(null);
-        }
+        if (status == current) return lastStatus.orElse(null);
 
         Map<OrderStatusType, OrderStatusType> validNext = Map.of(
                 OrderStatusType.PENDING, OrderStatusType.IN_PROGRESS,
@@ -366,16 +269,16 @@ public class OrderService implements IOrderService {
         if (expectedNext != null && expectedNext == status) {
             Order order = orderRepository.findById(orderId).orElse(null);
             if (order == null) return null;
-
             OrderStatus newStatus = lastStatus.orElse(new OrderStatus());
             newStatus.setId(orderId);
             newStatus.setOrders(order);
             newStatus.setStatus(status);
+            if (status == OrderStatusType.SERVED && order.getDeliverTime() == null) {
+                order.setDeliverTime(OffsetDateTime.now());
+                orderRepository.save(order);
+            }
             return orderStatusRepository.save(newStatus);
         }
-
         return null;
     }
-
-
 }
